--- a/app/views/pages/our_services.rhtml
+++ b/app/views/pages/our_services.rhtml
@@ -1,11 +1,3 @@
-
-<span class="clearfix"></span>
-<section class="container web-content">
-  <%= @our_services_page.content rescue '' %>
-</section>
-
-<span class="clearfix"></span>
-
-<hr />
-
-<span class="clearfix"></span>
+<script type="text/javascript">
+  jQuery('#services').addClass('current');
+</script>
