--- a/app/views/pages/about_us.rhtml
+++ b/app/views/pages/about_us.rhtml
@@ -1,10 +1,3 @@
-
-<span class="clearfix"></span>
-<section class="container web-content">
-  <%= @about_us_page.content rescue '' %>
-</section>
-<span class="clearfix"></span>
-
-<hr />
-
-<span class="clearfix"></span>
+<script type="text/javascript">
+  jQuery('#about-us').addClass('current');
+</script>
