--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -1,27 +1,3 @@
-
-  <span class="clearfix"></span>
-  <section id="slider_wrapper" class="under_header slider-wrapper theme-default container">
-    <div id="slider" class="nivoSlider">
-      <% @media.each do |media| %>
-      <a href="/bookings/<%= media.car_id %>"><img src='/uploads/<%= "#{media.car_id}-front.png" %>' data-thumb="<%= media.path %>" alt="<%= media.alt %>" title="<%= media.description %>" /></a>
-      <% end %>
-    </div>
-
-  </section>
-  <span class="clearfix"></span>
-  <section class="container web-content"><br />
-    <% if flash[:notice] %>
-    <p style="color: green;"><%= flash[:notice] %></p>
-    <% end %>
-    <%= @company_description %>
-  </section>
-
-  <script type="text/javascript" src="javascripts/jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="javascripts/jquery.nivo.slider.js"></script>
-  <script type="text/javascript">
-    
-    $(window).load(function() {
-      $('#slider').nivoSlider();
-    });
-    
-  </script>
+<script type="text/javascript">
+  jQuery('#home').addClass('current');
+</script>
