--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -12,6 +12,15 @@
         height: 90px;
         width: 240px;
       }
+
+      #tooplate_middle h1 {
+        color: #fff;
+        font-size: 44px;
+        font-weight: normal;
+        letter-spacing: 3px;
+        padding: 50px 0 0;
+        text-shadow: 1px 1px 1px #555;
+      }
     </style>
   </head>
   <body>
@@ -53,9 +62,13 @@
       <div id="tooplate_middle_wrapper2">
         <div id="tooplate_middle">
 
-          <h1>BE ACTIVE<span>with the best coffee</span></h1>
+          <h1>Helping you achieve the best results<span></span></h1>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut lorem id mauris cursus pellentesque. Donec lobortis magna at orci blandit ac lobortis ipsum vestibulum.</p>
+          <p>
+            To be the best research consulting firm that provides quality economic, 
+            social and environmental solutions that will help curb youth unemployment, 
+            gender inequality and poverty thereby promoting socio-economic development in Malawi.
+          </p>
 
           <a href="#"><span>+</span> More</a>
 
@@ -72,28 +85,26 @@
 
       <div id="tooplate_sidebar">
 
-        <h2>Our Services</h2>
+        <h2>Our Core Values</h2>
 
         <ul class="tooplate_list">
-          <li><a href="#">Praesent turpis erat</a></li>
-          <li><a href="#">Curabitur ullamcorper</a></li>
-          <li><a href="#">Pellentesque adipiscing</a></li>
-          <li><a href="#">Cras rutrum ullamcorper</a></li>
-          <li><a href="#">Mattis vel tempor eu</a></li>
-          <li><a href="#">Praesent diam mauris</a></li>
-          <li><a href="#">Vivamus risus massa</a></li>
-          <li><a href="#">Sodales nec bibendum eu</a></li>
-          <li><a href="#">Mauris sapien magna</a></li>
-          <li><a href="#">Etiam sit amet est arcu</a></li>
+          <li><a href="#">Excellency</a></li>
+          <li><a href="#">Honesty</a></li>
+          <li><a href="#">Creativity</a></li>
+          <li><a href="#">Quality</a></li>
         </ul>
         <div class="button"><a href="services.html">View All</a></div>
 
         <div class="cleaner_h60"></div>
 
-        <h2>Testimonial</h2>
+        <h2>Who are we?</h2>
 
         <blockquote>
-          <p>Aliquam tristique, lectus nec condimentum egestas, neque erat posuere purus, sed interdum elit est.</p>
+          <p>
+           We offer professional and expert advice in different areas of research that need critical attention.
+           Our main objective is to use research to provide economic, social and environmental solutions that
+           influence policy formulation and amendments in order to achieve economic growth.
+          </p>
 
           <cite>Smith - <span>Web designer</span></cite>
         </blockquote>
