--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -1,3 +1,29 @@
+
+<h2>Welcome to Creative Solutions Consulting</h2>
+
+
+<div class="image_wrapper fl_img">
+  <img src="/2033_business/images/tooplate_image_01.jpg" alt="Image 01" />
+</div>
+<p>
+  <em>
+    Helping you achieve the best results
+  </em>
+</p>
+
+<p>
+  <a href="/">Creative Solutions Consulting (CSC)</a> is a business solutions driven firm providing turnkey solutions and is registered under
+  the Business Act No. 12 of 2012. We offer professional and expert advice in different areas of 
+  research that need critical attention. Our main objective is to use research to provide economic, 
+  social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth.
+</p>
+
+<div class="button float_r"><a href="#">More...</a></div>
+
+<div class="cleaner_h30 horizon_divider"></div>
+<div class="cleaner_h30"></div>
+
+
 <script type="text/javascript">
   jQuery('#home').addClass('current');
 </script>
