--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -93,7 +93,7 @@
           <li><a href="#">Creativity</a></li>
           <li><a href="#">Quality</a></li>
         </ul>
-        <div class="button"><a href="services.html">View All</a></div>
+        <div class="button"><a href="#">View All</a></div>
 
         <div class="cleaner_h60"></div>
 
@@ -106,7 +106,7 @@
            influence policy formulation and amendments in order to achieve economic growth.
           </p>
 
-          <cite>Smith - <span>Web designer</span></cite>
+          <cite>Daisy - <span>CEO</span></cite>
         </blockquote>
 
       </div>
