--- a/app/views/pages/about_us.rhtml
+++ b/app/views/pages/about_us.rhtml
@@ -1,3 +1,21 @@
+
+<h2>About Us</h2>
+
+<div class="image_wrapper fr_img"><img src="/2033_business/images/tooplate_image_01.jpg" alt="Image 01" /></div>
+<p>
+  Creative Solutions Consulting is a business solutions driven firm providing turnkey solutions and is registered under the Business Act No. 12 of 2012. We offer professional and expert advice in different areas of research that need critical attention. Our main objective is to use research to provide economic, social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth.
+</p>
+<p>
+  In line with the Sustainable Development Goals (SDGs) and targets as a firm we would like to be a part of the great transformative change that Malawi will go through such that we are determined and committed to ensure that we achieve gender equality, sustainable economic growth and productive employment for all. Hence CSC strives to find such solutions through using different types of quantitative and qualitative research methodologies using both primary and secondary data to influence new and existing policies to favor vulnerable groups and change their wellbeing.
+</p>
+<p>
+  We put much emphasis on our client’s value for money by offering the best consulting services with high quality work which yields excellent results. In working with us as our clients, you will help us to contribute to job creation and reduce unemployment levels, particularly youth unemployment, which is a key issue that poses potential challenge and major concern for development in Malawi.  
+</p>
+
+
+<div class="cleaner_h30 horizon_divider"></div>
+<div class="cleaner_h30"></div>
+
 <script type="text/javascript">
   jQuery('#about-us').addClass('current');
 </script>
