--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -5,11 +5,7 @@
 <div class="image_wrapper fl_img">
   <img src="/2033_business/images/tooplate_image_01.jpg" alt="Image 01" />
 </div>
-<p>
-  <em>
-    Helping you achieve the best results
-  </em>
-</p>
+<p></p>
 
 <p>
   <a href="/">Creative Solutions Consulting (CSC)</a> is a business solutions driven firm providing turnkey solutions and is registered under
@@ -23,6 +19,32 @@
 <div class="cleaner_h30 horizon_divider"></div>
 <div class="cleaner_h30"></div>
 
+<div class="col_w270 float_l">
+
+  <h2>Our Services</h2>
+
+  <div class="image_wrapper2"><img src="/2033_business/images/tooplate_image_02.jpg" alt="Image 02" /></div>
+
+  <p>
+    CSC provides affordable excellent consulting services in research that act as catalysts for growth to our clients
+    while promoting a creative and peaceful work environment.
+  </p>
+  <p>
+    At CSC we target the following audiences; Companies, governmental and non-governmental organizations.
+    In order to find quality economic, social and environmental solutions that will help curb youth unemployment,
+    gender inequality and poverty, different quantitative and qualitative data analysis methodologies are used.
+  </p>
+</div>
+
+<div class="col_w270 float_r">
+
+  <h2>Professionalism</h2>
+
+  <div class="image_wrapper2"><img src="/2033_business/images/tooplate_image_03.jpg" alt="Image 03" /></div>
+  <p>Maintaining or improving its position in the market sector concerned only through superior quality and service.</p>
+  <p>Promoting positive and constructive relationships with other consulting firms, particularly with a view to providing a broader spectrum of expertise through capacity building.</p>
+  <p>Sustaining the company’s unique and noteworthy products and services through an ongoing commitment to innovation and creativity</p>
+</div>
 
 <script type="text/javascript">
   jQuery('#home').addClass('current');
