--- a/app/views/pages/contact_us.rhtml
+++ b/app/views/pages/contact_us.rhtml
@@ -1,3 +1,51 @@
+
+<h2>Contact Information</h2>
+
+<p><em>We are always ready to assist you. Below are our contact details. We will try to respond as soon as possible</em></p>
+<div class="cleaner_h40"></div>
+
+<div class="two_column_ws float_l">
+
+  <h6>Address</h6>
+  Creative Solutions Consulting, <br />
+  Area 3, <br />
+  Box 10001,<br />
+  Lilongwe 3<br /><br />
+</div>
+
+<div class="two_column_ws float_r">
+
+  <h6>&nbsp;</h6>
+  Tel: <b>000-000-000</b><br />
+  Fax: <b>000-000-000</b><br />
+  E-mail: <b>csc@gmail.com</b>
+</div>
+
+<div class="cleaner_h50"></div>
+
+<div id="contact_form">
+
+  <h4>Quick Contact Form</h4>
+  <form method="post" name="contact" action="/send_message">
+
+    <label for="author">Name:</label> <input type="text" id="author" name="author" class="required input_field" />
+    <div class="cleaner_h10"></div>
+
+    <label for="email">Email:</label> <input type="text" class="validate-email required input_field" name="email" id="email" />
+    <div class="cleaner_h10"></div>
+
+    <label for="subject">Subject:</label> <input type="text" class="validate-subject required input_field" name="subject" id="subject"/>
+    <div class="cleaner_h10"></div>
+
+    <label for="text">Message:</label> <textarea id="text" name="text" rows="0" cols="0" class="required"></textarea>
+    <div class="cleaner_h10"></div>
+
+    <input type="submit" value="Send" id="submit" name="submit" class="submit_btn float_l" />
+    <input type="reset" value="Reset" id="reset" name="reset" class="submit_btn float_r" />
+
+  </form>
+</div>
+
 <script type="text/javascript">
   jQuery('#contact').addClass('current');
 </script>
