--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -21,6 +21,16 @@
         padding: 50px 0 0;
         text-shadow: 1px 1px 1px #555;
       }
+
+      #header_phone_no span {
+        color: #019ED5;
+        font-size: 23px;
+      }
+
+      #header_phone_no span {
+       
+
+      }
     </style>
   </head>
   <body>
@@ -31,12 +41,12 @@
 
         <div id="site_title">
 
-          <h1><a href="#"><img class="csc-logo" src="/images/csc.jpg" alt="Creative Solutions Consulting" /></a></h1>
+          <!--<h1><a href="#"><img class="csc-logo" src="/images/csc.jpg" alt="Creative Solutions Consulting" /></a></h1>-->
 
         </div> <!-- end of site_title -->
 
         <div id="header_phone_no">
-			Phone: <span>+265(0) 998 267424</span>
+          <span>Creative Solutions Consulting (CSC)</span>
         </div>
 
         <div class="cleaner_h10"></div>
@@ -50,6 +60,7 @@
             <li><a href="/about_us" id="about-us">About Us</a></li>
             <li><a href="/our_services" id="services">Services</a></li>
             <li><a href="/our_solutions" id="solutions">Solutions</a></li>
+            <li><a href="/our_profile" id="profile">Profile</a></li>
             <li><a href="/contact_us" id="contact">Contact</a></li>
           </ul>
 
@@ -103,7 +114,7 @@
 
         <div class="cleaner_h60"></div>
 
-        <h2>Who are we?</h2>
+        <h2>What we do</h2>
 
         <blockquote>
           <p>
