--- a/app/views/pages/about_us.rhtml
+++ b/app/views/pages/about_us.rhtml
@@ -3,7 +3,7 @@
 
 <div class="image_wrapper fr_img"><img src="/2033_business/images/tooplate_image_01.jpg" alt="Image 01" /></div>
 <p>
-  Creative Solutions Consulting is a business solutions driven firm providing turnkey solutions and is registered under the Business Act No. 12 of 2012. We offer professional and expert advice in different areas of research that need critical attention. Our main objective is to use research to provide economic, social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth.
+  Creative Solutions Consulting is a business solutions driven firm providing turnkey solutions. We offer professional and expert advice in different areas of research that need critical attention. Our main objective is to use research to provide economic, social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth.
 </p>
 <p>
   In line with the Sustainable Development Goals (SDGs) and targets as a firm we would like to be a part of the great transformative change that Malawi will go through such that we are determined and committed to ensure that we achieve gender equality, sustainable economic growth and productive employment for all. Hence CSC strives to find such solutions through using different types of quantitative and qualitative research methodologies using both primary and secondary data to influence new and existing policies to favor vulnerable groups and change their wellbeing.
