--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -23,14 +23,15 @@
       }
 
       #header_phone_no span {
-        color: #019ED5;
         font-size: 23px;
-      }
-
-      #header_phone_no span {
        
-
       }
+
+      #header_phone_no span a {
+        text-decoration: none;
+        color: #019ED5 !important;
+      }
+      
     </style>
   </head>
   <body>
@@ -46,7 +47,7 @@
         </div> <!-- end of site_title -->
 
         <div id="header_phone_no">
-          <span>Creative Solutions Consulting (CSC)</span>
+          <span><a href="/">Creative Solutions Consulting (CSC)</a></span>
         </div>
 
         <div class="cleaner_h10"></div>
@@ -59,7 +60,7 @@
             <li><a href="/" id="home">Home</a></li>
             <li><a href="/about_us" id="about-us">About Us</a></li>
             <li><a href="/our_services" id="services">Services</a></li>
-            <li><a href="/our_solutions" id="solutions">Solutions</a></li>
+            <li><a href="/investors" id="investors">Investors</a></li>
             <li><a href="/our_profile" id="profile">Profile</a></li>
             <li><a href="/contact_us" id="contact">Contact</a></li>
           </ul>
@@ -123,7 +124,6 @@
             influence policy formulation and amendments in order to achieve economic growth.
           </p>
 
-          <cite>Daisy - <span>CEO</span></cite>
         </blockquote>
 
       </div>
