--- a/app/views/pages/contact_us.rhtml
+++ b/app/views/pages/contact_us.rhtml
@@ -16,8 +16,7 @@
 <div class="two_column_ws float_r">
 
   <h6>&nbsp;</h6>
-  Tel: <b>000-000-000</b><br />
-  Fax: <b>000-000-000</b><br />
+  Tel: <b>+265(0) 880 691 923</b><br />
   E-mail: <b>csc@gmail.com</b>
 </div>
 
