--- a/app/views/pages/our_profile.rhtml
+++ b/app/views/pages/our_profile.rhtml
@@ -7,60 +7,20 @@
 <h2>Our Profile</h2>
 
 <div class="image_wrapper fr_img"><img src="images/owners/csc-1.jpeg" alt="Image 01" /></div>
-<p><em><strong>DESIDERATA NKOMA</strong> - <span >Economist</span></em></p>
+<p><em><strong>DESIDERATA NKOMA</strong></em></p>
 
 <p>
-  <b>Desiderata Nkhoma</b> is a graduate from the University of Malawi; Chancellor College located in Zomba the old Capital City of
-  Malawi. She holds a credit bachelor’s degree in Social Science with a major in Economics and minor in Psychology.
-  She specifically has a wide range of knowledge, skills and experience in quantitative and qualitative methods data
-  analysis, research methods, gender mainstreaming, budget analysis and advocacy, community psychology,
-  econometrics, macro and micro economics, experimental psychology, learning and performance,
-  financial and managerial accounting, money and banking, development economics, agriculture nd transport economics, social marketing,  public finance, industrial economics, corporate finance, community and health psychology.
-
-  Consequently, she holds a certificate in data analysis statistical packages of STATA, SPSS and EXCELL.
-  She also has a certificate in Social Accountability and Budget Tracking. She is an excellent data analyst. Desiderata is an Economist with specialist in consulting for both international and local organizations.
-</p>
-
-<p>
-  Highlights of Desiderata’s career include:
-</p>
-
-<ul class="tooplate_list">
-  <li>
-    Working with Malawi Economic Justice Network (MEJN) as an intern on several
-    different projects such as Global Partnership for Social Accountability (GPSA), Project
-    Trocaire, Improved Local governance and Community Action in Malawi and
-    Participatory Budgeting Through Local Governments in Malawi to Promote Pro-child
-    Sensitive Budgets
-  </li>
-  <li>
-    Working with International Crops Research Institute for the Semi-arid Tropics (ICRISAT) as a Research Assistant
-  </li>
-</ul>
-<p>
-  All these mentioned experience base have given her excellent managerial skills and
-  made her one of the sought after female consultant’s in Lilongwe. She is brilliant
-  and has the capability to deliver assignments timely.
+  <b>ECONOMIST, Holds a bachelor’s Degree in Social Science</b> and a Certificate in STATA,
+  SPSS and EXCELL
 </p>
 
 <div class="cleaner_h30 horizon_divider"></div>
 <div class="cleaner_h30"></div>
 
 <div class="image_wrapper fr_img"><img src="images/owners/csc-3.jpeg" alt="Image 01" /></div>
-<p><em><strong>CHIFUNDO MCHOWA</strong> - <span >Researcher</span></em></p>
+<p><em><strong>CHIFUNDO MCHOWA</strong></em></p>
 <p>
-  Operations Manager, Chifundo Mchowa graduated from the University of Malawi,
-  Chancellor College with a Credit Bachelor’s Degree in Social Science with a major in
-  Economics and Minor is Sociology. She has worked as an Assistant Researcher for <b>Southern
-  Africa Institute for Economic Research</b> whose Executive Director is Professor Chinyamata
-  Chipeta. She has excellent hands on experience in conducting qualitative and quantitative
-  research. She has carried out a number of research on the indigenous economies in Malawi
-  hence has a good understanding of the Malawi’s local communities. In 2014 she attended a
-  workshop which was funded by the Africa Economic Research Consortium (AERC)
-  <b>Pan-African Perspectives on Malawi at 50: Towards Alternative Development Policies and
-    Strategies</b> where policies that Malawi has implemented since independence were evaluated,
-  education inclusive. All these mentioned experiences have given her a great researcher who is
-  always able to deliver.
+  <b>ECONOMIST, Holds a bachelor’s Degree in Social Science</b>
 </p>
 
 <script type="text/javascript">
