--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -85,7 +85,7 @@
             gender inequality and poverty thereby promoting socio-economic development in Malawi.
           </p>
 
-          <a href="#"><span>+</span> More</a>
+          <a href="/about_us"><span>+</span> More</a>
 
         </div>
       </div>
