--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -14,7 +14,7 @@
   social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth.
 </p>
 
-<div class="button float_r"><a href="#">More...</a></div>
+<div class="button float_r"><a href="/our_services">More...</a></div>
 
 <div class="cleaner_h30 horizon_divider"></div>
 <div class="cleaner_h30"></div>
