--- a/app/views/pages/contact_us.rhtml
+++ b/app/views/pages/contact_us.rhtml
@@ -1,7 +1,9 @@
 <style>
   .logo{
     height: 100px;
-    width: 450px;
+    float: right;
+    margin-top: -55px;
+    position: relative;
 }
 </style>
 <h2>Contact Information</h2>
@@ -9,7 +11,7 @@
 <p><em>We are always ready to assist you. Below are our contact details. We will try to respond as soon as possible</em></p>
 <div class="cleaner_h40"></div>
 <img class="logo" src="/images/csc.jpg" alt="CSC logo"></img><br /><br />
-<div class="two_column_ws float_l">
+<div class="two_column_ws float_l"><br />
 
   <h6>Address</h6>
   Creative Solutions Consulting, <br />
