--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -8,13 +8,12 @@
 <p></p>
 
 <p>
-  <a href="/">Creative Solutions Consulting (CSC)</a> is a business solutions driven firm providing turnkey solutions and is registered under
-  the Business Act No. 12 of 2012. We offer professional and expert advice in different areas of 
+  <a href="/">Creative Solutions Consulting (CSC)</a> is a business solutions driven firm providing turnkey solutions. We offer professional and expert advice in different areas of 
   research that need critical attention. Our main objective is to use research to provide economic, 
   social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth.
 </p>
 
-<div class="button float_r"><a href="/our_services">More...</a></div>
+<div class="button float_r"><a href="/about_us">More...</a></div>
 
 <div class="cleaner_h30 horizon_divider"></div>
 <div class="cleaner_h30"></div>
@@ -30,7 +29,7 @@
     while promoting a creative and peaceful work environment.
   </p>
   <p>
-    At CSC we target the following audiences; Companies, governmental and non-governmental organizations.
+    At CSC we target the following audiences; Individuals, Companies, Governmental and Non-governmental organizations.
     In order to find quality economic, social and environmental solutions that will help curb youth unemployment,
     gender inequality and poverty, different quantitative and qualitative data analysis methodologies are used.
   </p>
@@ -41,6 +40,7 @@
   <h2>Professionalism</h2>
 
   <div class="image_wrapper2"><img src="/2033_business/images/tooplate_image_03.jpg" alt="Image 03" /></div>
+  <p>To achieve and sustain the highest standard and quality of services, CSC promotes the following:</p>
   <p>Maintaining or improving its position in the market sector concerned only through superior quality and service.</p>
   <p>Promoting positive and constructive relationships with other consulting firms, particularly with a view to providing a broader spectrum of expertise through capacity building.</p>
   <p>Sustaining the company’s unique and noteworthy products and services through an ongoing commitment to innovation and creativity</p>
