--- a/app/views/pages/investors.rhtml
+++ b/app/views/pages/investors.rhtml
@@ -1,6 +1,6 @@
 <h2>Potential Investors</h2>
 <p>
-  Do you have funds and are looking for somewhere to invest? CSC plans to expand and grow
+  Do you have funds or expertise and you are looking for somewhere to invest? CSC plans to expand and grow
   into a multinational consulting company in order to extend and provide its services to both
   national and international clients. This in turn provides jobs to all as a way of combating youth
   unemployment in Malawi.
