--- a/app/views/pages/our_services.rhtml
+++ b/app/views/pages/our_services.rhtml
@@ -10,29 +10,11 @@
 <p>
   CSC provides affordable excellent consulting services in research that act as catalysts for growth
   to our clients while promoting a creative and peaceful work environment. At CSC we target the
-  following audiences; Individuals, Companies, governmental and non-governmental organizations. In order to
+  following audiences; Individuals, Companies, Governmental and Non-governmental organizations. In order to
   find quality economic, social and environmental solutions that will help curb youth
   unemployment, gender inequality and poverty, different quantitative and qualitative data analysis
   methodologies are used
 </p>
-
-<h4>CORE-VALUES</h4>
-Creative Solutions Consulting has four values namely: <b>Excellency</b>, <b>Honesty</b>, <b>Creativity and Quality</b>
-
-<ul class="tooplate_list">
-  <li>
-    <b>Excellency</b>: We believe in persistently creating better ways of doing the work we do in order to always excel
-  </li>
-  <li>
-    <b>Honesty</b>: We believe in engaging in honest transactions that give a true reflection of a situation
-  </li>
-  <li>
-    <b>Creativity</b>: CSC promotes a creative work environment where employees are able to come up with innovative solutions
-  </li>
-  <li>
-    <b>Quality</b>: CSC believes in producing high quality work
-  </li>
-</ul>
 
 
 <div class="cleaner_h30 horizon_divider"></div>
