--- a/app/views/pages/our_services.rhtml
+++ b/app/views/pages/our_services.rhtml
@@ -6,7 +6,7 @@
 </style>
 
 <h2>Our Services</h2>
-<div class="image_wrapper fr_img"><img src="images/owners/csc-1.jpeg" alt="Image 01" /></div>
+<div class="image_wrapper fr_img"><img src="/images/pcs/pc2.jpg" alt="Image 01" /></div>
 <p>
   CSC provides affordable excellent consulting services in research that act as catalysts for growth
   to our clients while promoting a creative and peaceful work environment. At CSC we target the
