Changing alt tag for images

--- a/app/views/pages/about_us.rhtml
+++ b/app/views/pages/about_us.rhtml
@@ -1,7 +1,7 @@
 
 <h2>About Us</h2>
 
-<div class="image_wrapper fr_img"><img src="/images/pcs/pc5.jpg" alt="Image 01" /></div>
+<div class="image_wrapper fr_img"><img src="/images/pcs/pc5.jpg" alt="About us img" /></div>
 <p>
   Creative Solutions Consulting (CSC) is a business solutions driven firm providing turnkey solutions. We offer professional and expert advice in different areas of research that need critical attention. Our main objective is to use research to provide economic, social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth.
 </p>
