--- a/app/views/pages/our_profile.rhtml
+++ b/app/views/pages/our_profile.rhtml
@@ -6,7 +6,7 @@
 
 <h2>Our Profile</h2>
 
-<div class="image_wrapper fr_img"><img src="images/owners/csc-1.jpeg" alt="Image 01" /></div>
+<div class="image_wrapper fr_img"><img src="images/owners/csc-1.jpeg" alt="Desidereta img" /></div>
 <p><em><strong>DESIDERATA NKHOMA</strong></em></p>
 
 <p>
@@ -17,7 +17,7 @@
 <div class="cleaner_h30 horizon_divider"></div>
 <div class="cleaner_h30"></div>
 
-<div class="image_wrapper fr_img"><img src="images/owners/csc-5.jpeg" alt="Image 01" /></div>
+<div class="image_wrapper fr_img"><img src="images/owners/csc-5.jpeg" alt="Chifundo img" /></div>
 <p><em><strong>CHIFUNDO MCHOWA</strong></em></p>
 <p>
   <b>ECONOMIST, Holds a bachelor’s Degree in Social Science</b>
