--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -5,6 +5,7 @@
     <title><%= @title %></title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
+    <meta name="google-site-verification" content="PdnZ9kveLK2MknSxlYYYbIdQMBxCZam4whPyjXv1P3U" />
     <link href="/2033_business/tooplate_style.css" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/simpletextrotator.css" rel="stylesheet" type="text/css" />
     <script src="/assets/plugins/jquery-2.0.3.min.js"></script>
