--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -25,6 +25,15 @@
         text-shadow: 1px 1px 1px #555;
       }
 
+      #header_phone_no {
+        display: inherit !important;
+        float:none;
+        font-size: 14px;
+        font-weight: bold;
+        padding-left: 13px;
+        padding-top: 60px;
+      }
+
       #header_phone_no span {
         font-size: 23px;
 
