--- a/app/views/pages/contact_us.rhtml
+++ b/app/views/pages/contact_us.rhtml
@@ -1,22 +1,21 @@
 <style>
   .logo{
     height: 100px;
-    float: right;
+    float: left;
     margin-top: -55px;
-    position: relative;
+    position: absolute;
 }
 </style>
 <h2>Contact Information</h2>
 
 <p><em>We are always ready to assist you. Below are our contact details. We will try to respond as soon as possible</em></p>
-<div class="cleaner_h40"></div>
-<img class="logo" src="/images/csc.jpg" alt="CSC logo"></img><br /><br />
+<div class="cleaner_h40"></div><br />
+<div><img class="logo" src="/images/csc.jpg" alt="CSC logo"></img><br /><br /></div>
 <div class="two_column_ws float_l"><br />
 
   <h6>Address</h6>
   Creative Solutions Consulting, <br />
-  Area 3, <br />
-  Box 10001,<br />
+  Box ,<br />
   Lilongwe 3<br /><br />
 </div>
 
