--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -20,7 +20,7 @@
 
   <h2>Our Services</h2>
 
-  <div class="image_wrapper2"><img src="/images/pcs/pc2.jpg" alt="Our services img" /></div>
+  <div class="image_wrapper2"><img src="/images/pcs/pc6.jpg" alt="Our services img" /></div>
 
   <p>
     CSC provides affordable excellent consulting services in research that act as catalysts for growth to our clients
@@ -39,9 +39,9 @@
 
   <div class="image_wrapper2"><img src="/images/pcs/pc11.jpg" alt="Professionalism img" /></div>
   <p>To achieve and sustain the highest standard and quality of services, CSC promotes the following:</p>
-  <p>Maintaining or improving its position in the market sector concerned only through superior quality and service.</p>
+  <p>Maintaining or improving its position in the market sector concerned only through superior quality and service,</p>
   <p>Promoting positive and constructive relationships with other consulting firms, particularly with a view to providing a broader spectrum of expertise through capacity building.</p>
-  <p>Sustaining the company’s unique and noteworthy products and services through an ongoing commitment to innovation and creativity</p>
+  <p>Sustaining the firm’s unique and noteworthy products and services through an ongoing commitment to innovation and creativity</p>
 </div>
 
 <script type="text/javascript">
