changing email address

--- a/app/views/pages/contact_us.rhtml
+++ b/app/views/pages/contact_us.rhtml
@@ -23,7 +23,7 @@
 
   <h6>&nbsp;</h6>
   Tel: <b>+265(0) 880 691 923</b><br />
-  E-mail: <b>csc@gmail.com</b>
+  E-mail: <b>creativesolutionsmw@gmail.com</b>
 </div>
 
 <div class="cleaner_h50"></div>
