--- a/app/views/pages/our_services.rhtml
+++ b/app/views/pages/our_services.rhtml
@@ -9,7 +9,10 @@
 <div class="image_wrapper fr_img"><img src="/images/pcs/pc6.jpg" alt="Our services img" /></div>
 <p>
   CSC provides affordable excellent consulting services in research that act as catalysts for growth
-  to our clients while promoting a creative and peaceful work environment. At CSC we target the
+  to our clients while promoting a creative and peaceful work environment.
+</p>
+<p>
+  At CSC we target the
   following audiences; Individuals, Companies, Governmental and Non-governmental organizations. In order to
   find quality economic, social and environmental solutions that will help curb youth
   unemployment, gender inequality and poverty, different quantitative and qualitative data analysis
