--- a/app/views/pages/our_profile.rhtml
+++ b/app/views/pages/our_profile.rhtml
@@ -23,6 +23,14 @@
   <b>ECONOMIST, Holds a bachelor’s Degree in Social Science</b>
 </p>
 
+<div class="cleaner_h30 horizon_divider"></div>
+<div class="cleaner_h30"></div>
+
+<div class="image_wrapper fr_img"><img style="height: 100px;" src="images/owners/csc-7.jpeg" alt="Joseph img" /></div>
+<p><em><strong>Joseph Makondetsa</strong></em></p>
+<p>
+  <b>ECONOMIST and DEMOGRAPHER, Holds a bachelor's degree in Social Science with knowledge in Microsoft Office, Microsoft project, STATA, SPSS and SPECTRUM</b>
+</p>
 <script type="text/javascript">
   jQuery('#profile').addClass('current');
 </script>
