--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title><%= @title %></title>
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
+    <meta name="keywords" content="Consulting, consultancy in Malawi, CSC, Creative Solutions Consulting" />
+    <meta name="description" content="Creative Solutions Consulting (CSC) is a business solutions driven firm providing turnkey solutions. We offer professional and expert advice in different areas of research that need critical attention. Our main objective is to use research to provide economic, social and environmental solutions that influence policy formulation and amendments in order to achieve economic growth. " />
     <meta name="google-site-verification" content="PdnZ9kveLK2MknSxlYYYbIdQMBxCZam4whPyjXv1P3U" />
     <link href="/2033_business/tooplate_style.css" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/simpletextrotator.css" rel="stylesheet" type="text/css" />
